// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/DeleteDialog Snapshots Basic 1`] = `
<div
  class="container"
>
  <div
    class="v-dialog__container"
    style="display: block;"
    value="true"
  >
    <div
      class="v-dialog__content v-dialog__content--active"
      style="z-index: 202;"
      tabindex="-1"
    >
      <div
        class="v-dialog v-dialog--active"
        style="max-width: 500px;"
      >
        <div
          class="simple-confirm pa-3 v-card v-sheet theme--light"
        >
          <div
            class="v-card__title px-0 justify-center"
          >
            <div
              class="title font-weight-bold"
            >
              
        All to trash ?
      
            </div>
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="py-5 px-2"
          >
            <p
              class="subheading"
            >
              
          item(s): Demo Admin, Level 1 User, Level 2 User, Level 3 User, Level 4 User, Level 5 User, Level 6 User, Level 7 User, Level 8 User, Colleague 1 User
        
            </p>
          </div>
           
          <div
            class="v-card__actions px-8"
          >
            <button
              class="v-btn v-btn--block theme--light light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
      No
    
              </div>
            </button>
             
            <div
              class="spacer"
            />
             
            <button
              class="v-btn v-btn--block theme--light primary"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
      Yes
    
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/DeleteDialog Snapshots Loading 1`] = `
<div
  class="container"
>
  <div
    class="v-dialog__container"
    style="display: block;"
    value="true"
  >
    <div
      class="v-dialog__content v-dialog__content--active"
      style="z-index: 202;"
      tabindex="-1"
    >
      <div
        class="v-dialog v-dialog--active"
        style="max-width: 500px;"
      >
        <div
          class="simple-confirm pa-3 v-card v-sheet theme--light deleting"
        >
          <div
            class="v-card__title px-0 justify-center"
          >
            <div
              class="title font-weight-bold"
            >
              
        Are you sure you want to delete the selected item(s)
      
            </div>
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="py-5 px-2"
          >
            <div
              class="text-xs-center"
            >
              <p
                class="subheading"
              >
                
            Processing, please wait...
          
              </p>
               
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="v-progress-circular primary--text"
                role="progressbar"
                style="height: 200px; width: 200px;"
              >
                <svg
                  style="transform: rotate(-90deg);"
                  viewBox="21.62162162162162 21.62162162162162 43.24324324324324 43.24324324324324"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="v-progress-circular__underlay"
                    cx="43.24324324324324"
                    cy="43.24324324324324"
                    fill="transparent"
                    r="20"
                    stroke-dasharray="125.664"
                    stroke-dashoffset="0"
                    stroke-width="3.243243243243243"
                  />
                  <circle
                    class="v-progress-circular__overlay"
                    cx="43.24324324324324"
                    cy="43.24324324324324"
                    fill="transparent"
                    r="20"
                    stroke-dasharray="125.664"
                    stroke-dashoffset="125.66370614359172px"
                    stroke-width="3.243243243243243"
                  />
                </svg>
                <div
                  class="v-progress-circular__info"
                >
                  
            0 %
          
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="v-card__actions px-8"
          >
            <button
              class="v-btn v-btn--block theme--light light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
      No
    
              </div>
            </button>
             
            <div
              class="spacer"
            />
             
            <button
              class="v-btn v-btn--block theme--light primary"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
      Yes
    
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
